added ENV for additional java options and to enable/disable Madbot